Update benchmarks and include GelfLayout.